# jwt-generate

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  canister_ids.json  dfx.json
candid/: jwt_generate.did
scripts/: build.sh
src/: Cargo.toml  lib.rs
