[package]
name = "jwt_generate"
version = "0.1.0"
edition = "2021"

[build]
target = "wasm32-unknown-unknown"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pkcs8"] }
base64 = "0.13"
serde_json = "1.0"
sha2 = "0.10"
ic-cdk = "0.17"
candid = "0.10"



[features]
default = []

[profile.release]
# Required to ensure compatibility with Internet Computer
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"



